Minor fix for dark mode
Presets window had the wrong background color in dark mode

--- a/webui/index.css
+++ b/webui/index.css
@@ -70,6 +70,10 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
+.modal {
+    background-color: #fff;
+}
+
 .invalid {
     border-color: red;
 }
@@ -111,6 +115,10 @@ div.description {
     }
     div.description {
         color: #888;
+    }
+
+    .modal {
+        background-color: #333;
     }
 
 }
